--- a/style.css
+++ b/style.css
@@ -16,38 +16,34 @@ body {
     cursor: url('devi-cursor.png') 16 16, default;
 }
 
-/* Contenitore centrato */
 .container {
     display: flex;
     flex-direction: column;
     align-items: center;
+    text-align: center;
 }
 
-
-/* Stile per la scritta "Clicca per una sorpresa!" */
+/* Stile per il sottotitolo */
 #subtitle {
-    font-size: 2rem;
+    font-size: 1.5rem;
     color: #fff;
     font-family: 'Comic Sans MS', cursive;
-    text-align: center;
     text-shadow: 0 0 10px #000;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
 }
 
-/* Stile per la scritta "PIPUPAPU" */
+/* Stile per il titolo */
 #title {
-    font-size: 8rem;
+    font-size: 10vw;
     color: #fff;
     font-family: 'Comic Sans MS', cursive;
-    text-align: center;
     text-shadow: 0 0 20px #000;
 }
-
 
 /* Stile per l'immagine sorpresa */
 #surprise-image {
     position: absolute;
-    width: 200px;
+    width: 30vw;
     height: auto;
     top: 50%;
     left: 50%;
@@ -84,7 +80,7 @@ body {
     100% { background-position: 0% 50%; }
 }
 
-/* Contenitore per i fuochi d'artificio */
+/* Stile per il contenitore dei fuochi d'artificio */
 #fireworks-container {
     position: fixed;
     top: 0;
@@ -99,11 +95,57 @@ body {
 /* Stile per le particelle dei fuochi d'artificio */
 .particle {
     position: absolute;
-    width: 20px;
-    height: 20px;
+    width: 15px;
+    height: 15px;
     border-radius: 50%;
     background-color: #fff;
     box-shadow: 0 0 10px rgba(255, 255, 255, 0.8);
     opacity: 0.9;
     pointer-events: none;
+}
+
+/* Media query per schermi piccoli (smartphone) */
+@media (max-width: 600px) {
+    #subtitle {
+        font-size: 1rem;
+        margin-bottom: 5px;
+    }
+
+    #title {
+        font-size: 12vw;
+    }
+
+    #surprise-image {
+        width: 40vw;
+    }
+}
+
+/* Media query per schermi medi (tablet) */
+@media (min-width: 600px) and (max-width: 1024px) {
+    #subtitle {
+        font-size: 1.2rem;
+    }
+
+    #title {
+        font-size: 8vw;
+    }
+
+    #surprise-image {
+        width: 25vw;
+    }
+}
+
+/* Media query per schermi grandi (desktop) */
+@media (min-width: 1024px) {
+    #subtitle {
+        font-size: 1.5rem;
+    }
+
+    #title {
+        font-size: 6vw;
+    }
+
+    #surprise-image {
+        width: 20vw;
+    }
 }
